--- a/src/main/resources/css/portal-toolbar.css
+++ b/src/main/resources/css/portal-toolbar.css
@@ -6,3 +6,20 @@
     margin-top: 3px;
     margin-right: 4px;
 }
+
+#widgetsModal .form-group{
+    margin-bottom: 10px;
+}
+
+#widgetsModal .label{
+    font-weight: bold;
+}
+
+#widgetsModal .active{
+    background-color: #f5f5f5;
+}
+
+#widgetsModal .widgets-table tr:hover{
+    background-color: #f5f5f5;
+    cursor: pointer;
+}
