improve portal widget skin wrapper, to be set at widget level make a example with the hello world widget

--- a/src/main/resources/css/box.advanced.css
+++ b/src/main/resources/css/box.advanced.css
@@ -7,10 +7,18 @@
 
 .widget .widget-header {
     border-bottom: 1px solid;
-    background-color: #3399ff;
-    border-color: #bce8f1;
     cursor: move;
     position: relative;
+}
+
+.widget-blue .widget-header {
+    background-color: #3399ff;
+    border-color: #bce8f1;
+}
+
+.widget-green .widget-header {
+    background-color: #46a546;
+    border-color: #b1f1b8;
 }
 
 .widget .widget-header h4{
