--- a/src/main/import/content/modules/templates-portal/files/less/jahia.less/jahia.less
+++ b/src/main/import/content/modules/templates-portal/files/less/jahia.less/jahia.less
@@ -43,23 +43,6 @@
     padding-left: 0;
     padding-right: 0;
 }
-/* = User
- -------------------------------------------------------------- */
-.navbar .user-box {
-    float: right;
-    line-height: 30px;
-    margin: 3px 30px 0 30px;
-}
-.navbar .user-box a.dropdown-toggle {
-  color: #fff;
-  text-decoration: none;
-}
-.navbar .user-box a.dropdown-toggle:hover,
-.navbar .user-box a.dropdown-toggle:focus {
-  color: #fff;
-  text-decoration: underline;
-}
-
 /* = Utils
  -------------------------------------------------------------- */
 .navbar .brand {
@@ -94,7 +77,7 @@
 /* = Navbar
 -------------------------------------------------------------- */
 .navbar {
-    border-top: 4px solid #6600cc!important;
+    border-top: 4px solid #612d50!important;
 }
 .navbar-inverse .brand span {
     display:none;
@@ -105,18 +88,10 @@
 /* = Section
 -------------------------------------------------------------- */
 .section,
-.content-section,
-.slider-section {
+.content-section {
     border-bottom: 1px solid #eaeaea;
     margin-bottom: 15px;
     padding-bottom: 15px;
-}
-.illustration-section {
-    border-bottom: 1px solid #EAEAEA;
-    margin-bottom: 15px;
-    padding-bottom: 15px;
-    margin-top: -20px;
-    padding-top: 20px;
 }
 
 /* = Copyright
