--- a/src/main/import/content/modules/templates-portal/files/less/variables.less/variables.less
+++ b/src/main/import/content/modules/templates-portal/files/less/variables.less/variables.less
@@ -44,7 +44,7 @@
 
 // Links
 // -------------------------
-@linkColor:             #6600cc;
+@linkColor:             #39f;
 @linkColorHover:        darken(@linkColor, 15%);
 
 
@@ -59,7 +59,7 @@
 @baseLineHeight:        20px;
 @altFontFamily:         @serifFontFamily;
 
-@headingsFontFamily:    'Audiowide',Arial,"Helvetica Neue", Helvetica,sans-serif; // inherit; empty to use BS default, @baseFontFamily
+@headingsFontFamily:    'Scada',Arial,"Helvetica Neue", Helvetica,sans-serif; // inherit; empty to use BS default, @baseFontFamily
 @headingsFontWeight:    normal;    // instead of browser default, bold
 @headingsColor:         @black; // empty to use BS default, @textColor
 
