--- a/src/main/resources/css/jahia-old.css
+++ b/src/main/resources/css/jahia-old.css
@@ -1,4 +1,5 @@
 
+
 /******************************************************************************
 * old styles
 ******************************************************************************/
@@ -403,11 +404,11 @@
 	padding:0.2em 0.5em;
 }
 .wrapper .paginationNavigation a:hover {
-	background:#6600cc;
+	background:#3399ff;
 	color:#fff;
 }
 .wrapper .paginationNavigation .currentPage {
-	background:#6600cc;
+	background:#3399ff;
 	color:#fff;
 	padding:0.2em 0.5em;
 }
@@ -444,14 +445,14 @@
 	text-decoration:none;
 }
 .wrapper .alphabeticalNavigation a:hover {
-	background:#6600cc;
+	background:#3399ff;
 	color:#fff;
 }
 .wrapper .alphabeticalNavigation a.current {
 	height:28px;
 	line-height:28px;
 	border:1px solid #eaeaea;
-	background:#6600cc;
+	background:#3399ff;
 	color:#fff;
 	padding: 2px 4px;
 	text-decoration:none;
@@ -493,9 +494,9 @@
 	vertical-align: middle;
 	cursor: pointer;
 	color: #fff;
-	background-color: #6600cc;
+	background-color: #3399ff;
 	border:0;
- 	*background-color: #6600cc;
+ 	*background-color: #3399ff;
  	 /* Darken IE7 buttons by default so they stand out more given they won't have borders */
  	*border: 0;
 
@@ -523,7 +524,7 @@
 ******************************************************************************/
 
 .wrapper a.aButton, .wrapper a.aButton:link, .wrapper a.aButton:visited {
-	background-color:#6600cc;
+	background-color:#3399ff;
 	color:#fff;
 	border:none;
 	text-align:center;
@@ -536,7 +537,7 @@
 .wrapper a.aButton:hover, .wrapper a.aButton:hover {
 	cursor: pointer;
 	color:#fff;
-	background-color:#5500aa;
+	background-color:#008ae5;
 	text-decoration:none;
 }
 .wrapper a.aButtonMarginBottom {
@@ -672,7 +673,7 @@
 .wrapper a.more,
 .wrapper a.more:link,
 .wrapper a.more:visited{
-    background-color:#6600cc;
+    background-color:#3399ff;
     color:#fff;
     border:none;
     text-align:center;
@@ -684,14 +685,14 @@
 .wrapper a.more:active {
     cursor: pointer;
     color:#fff;
-    background-color:#5500aa;
+    background-color:#008ae5;
     text-decoration:none;
 }
 
 .wrapper a.more2,
 .wrapper a.more2:link,
 .wrapper a.more2:visited {
-    background-color:#6600cc;
+    background-color:#3399ff;
     color:#fff;
     border:none;
     text-align:center;
@@ -702,14 +703,14 @@
 .wrapper a.more2:active {
     cursor: pointer;
     color:#fff;
-    background-color:#5500aa;
+    background-color:#008ae5;
     text-decoration:none;
 }
 
 .wrapper a.returnLink,
 .wrapper a.returnLink a:link,
 .wrapper a.returnLink:visited{
-    background-color:#6600cc;
+    background-color:#3399ff;
     color:#fff;
     border:none;
     text-align:center;
@@ -723,7 +724,7 @@
 .wrapper a.returnLink:active {
     cursor: pointer;
     color:#fff;
-    background-color:#5500aa;
+    background-color:#008ae5;
     text-decoration:none;
 }
 .wrapper .divReturnLink{
@@ -779,7 +780,7 @@
 }
 .wrapper .idTabs li a.selected, .wrapper .idTabs li a:hover, .wrapper .idTabs li a.selected {
 	text-decoration:none;
-	color: #6600cc;
+	color: #3399ff;
 }
 .wrapper .idTabs li a span {
 	background:none;
@@ -798,7 +799,7 @@
 .wrapper .idTabs li a.selected span, .wrapper .idTabs li a:hover span, .wrapper .idTabs li a.idTabs span {
 	text-decoration:none;
 	background-color:#FFF;
-	color: #6600cc;
+	color: #3399ff;
 }
 /******************************************************************************
 * Forum
@@ -830,7 +831,7 @@
 .wrapper #forum-body  .forum-buttons a:link,
 .wrapper #forum-body  .forum-buttons a:visited{
     background:none;
-    background-color:#6600cc;
+    background-color:#3399ff;
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
     border-radius: 3px;
@@ -852,7 +853,7 @@
     text-decoration:none;
     color: #fff;
     background:none;
-    background-color:#6600cc;
+    background-color:#3399ff;
 }
 .wrapper #forum-body .breadcrumb {
     list-style: none outside none;
@@ -871,7 +872,7 @@
 ----------------------------------------*/
 .wrapper .post-date {
     background: none;
-    background-color: #6600cc;
+    background-color: #3399ff;
     color: #FFF;
     float: left;
     font-size: 1.6em;
@@ -915,7 +916,7 @@
     padding-right: 22px;
 }
 .wrapper .addArticle a, .wrapper .addArticle a:link {
-    background: url("../img/addarticle.png") no-repeat scroll 2% 50% #6600cc;
+    background: url("../img/addarticle.png") no-repeat scroll 2% 50% #3399ff;
     border-radius: 3px;
     color: #fff;
     display: block;
@@ -932,8 +933,8 @@
     transition: all 0.3s ease-in-out 0s;
 }
 .wrapper .fc-event-skin {
-    background-color: #6600cc;
-    border-color: #6600cc;
+    background-color: #3399ff;
+    border-color: #3399ff;
     color: #FFFFFF;
 }
 /* wiki
