--- a/src/main/resources/css/news-events.css
+++ b/src/main/resources/css/news-events.css
@@ -1,3 +1,4 @@
+
 /*media-list*/
 /*media-small*/
 li.media-small .media-photo {
@@ -41,7 +42,7 @@ li.media-small h3 {
 }
 .media-heading a:hover,
 .media-heading a:focus {
-  color: #6600cc;
+  color: #39f;
   text-decoration: none;
 }
 li.media-small,
@@ -88,7 +89,7 @@ div.media-date {
   min-width: 60px;
   float: left;
   margin: 0 5px 5px 0;
-  background: #6600cc;
+  background: #39f;
   text-align: center;
 }
 div.media-date-big-end {
