--- a/src/main/resources/css/portal/portal-demo.css
+++ b/src/main/resources/css/portal/portal-demo.css
@@ -24,6 +24,7 @@
     border: 1px dotted black;
     visibility: visible !important;
     height: 50px !important;
+    margin-bottom: 20px;
 }
 
 .userPortals {
