--- a/src/main/resources/less/jahia.less
+++ b/src/main/resources/less/jahia.less
@@ -77,7 +77,7 @@
 /* = Navbar
 -------------------------------------------------------------- */
 .navbar {
-    border-top: 4px solid #612d50!important;
+    border-top: 4px solid #6600cc !important;
 }
 .navbar-inverse .brand span {
     display:none;
