--- a/src/main/resources/less/jahia.less
+++ b/src/main/resources/less/jahia.less
@@ -60,6 +60,9 @@
 }
 /* = Wrapper
 -------------------------------------------------------------- */
+.wrapper_container {
+  padding: 84px 0 0 0;
+}
 .wrapper {
     background-attachment: scroll !important;
     background-color: #fff;
@@ -72,7 +75,6 @@
     width: 1200px;
     padding: 20px 0 0 0 ;
     min-width: 320px;
-    margin-top: 84px;
 }
 /* = Navbar
 -------------------------------------------------------------- */
@@ -141,9 +143,9 @@ ul.sitemap li li li{display:inline-block;*display:inline}
 /* =Responsive: Less 979px
 -------------------------------------------------------------- */
 @media (max-width: 979px) {
-    .wrapper {
-        margin-top: 0;
-    }
+  .wrapper_container {
+    padding: 0;
+  }
     .navbar .brand {
         display: block;
         float: left;
