--- a/src/main/import/content/modules/templates-portal/files/bootstrap/css/bootstrap.css/bootstrap.css
+++ b/src/main/import/content/modules/templates-portal/files/bootstrap/css/bootstrap.css/bootstrap.css
@@ -5400,6 +5400,9 @@ input[type="submit"].btn.btn-mini {
   margin-left: 5px;
   margin-bottom: 0;
 }
+.modal-footer .modal-footer .btn {
+  margin-bottom: 0;
+}
 .modal-footer .btn-group .btn + .btn {
   margin-left: -1px;
 }
