--- a/src/main/resources/less/modals.less
+++ b/src/main/resources/less/modals.less
@@ -84,6 +84,9 @@
     margin-left: 5px;
     margin-bottom: 0; // account for input[type="submit"] which gets the bottom margin like all other inputs
   }
+.modal-footer .btn {
+    margin-bottom: 0;
+  }
   // but override that for button groups
   .btn-group .btn + .btn {
     margin-left: -1px;
