--- a/src/main/import/content/modules/templates-portal/files/bootstrap/css/bootstrap.css/bootstrap.css
+++ b/src/main/import/content/modules/templates-portal/files/bootstrap/css/bootstrap.css/bootstrap.css
@@ -6195,13 +6195,6 @@ a.badge:focus {
 .affix {
   position: fixed;
 }
-/* = Fix slidebar background
- -------------------------------------------------------------- */
-#sb-site {
-  background-color: #ffffff;
-  background-image: url("../img/body-bg.png");
-  background-repeat: repeat;
-}
 .clearfix {
   *zoom: 1;
 }
@@ -6264,9 +6257,6 @@ a.badge:focus {
 }
 /* = Wrapper
 -------------------------------------------------------------- */
-.wrapper_container {
-  padding: 84px 0 0 0;
-}
 .wrapper {
   background-attachment: scroll !important;
   background-color: #fff;
@@ -6279,6 +6269,7 @@ a.badge:focus {
   width: 1200px;
   padding: 20px 0 0 0 ;
   min-width: 320px;
+  margin-top: 84px;
 }
 /* = Navbar
 -------------------------------------------------------------- */
@@ -6356,9 +6347,6 @@ ul.sitemap li li li {
 /* =Responsive: Less 979px
 -------------------------------------------------------------- */
 @media (max-width: 979px) {
-  .wrapper_container {
-    padding: 0;
-  }
   .navbar .brand {
     display: block;
     float: left;
