--- a/src/main/import/content/modules/templates-portal/files/bootstrap/css/bootstrap.css/bootstrap.css
+++ b/src/main/import/content/modules/templates-portal/files/bootstrap/css/bootstrap.css/bootstrap.css
@@ -6346,7 +6346,10 @@ ul.sitemap li li li {
 }
 /* =Responsive: Less 979px
 -------------------------------------------------------------- */
-@media (max-width: 979px) {
+@media (max-width: 1200px) {
+  .wrapper {
+    margin-top: 0;
+  }
   .navbar .brand {
     display: block;
     float: left;
@@ -8058,7 +8061,7 @@ ul.sitemap li li li {
     position: static;
   }
 }
-@media (max-width: 979px) {
+@media (max-width: 1200px) {
   body {
     padding-top: 0;
   }
@@ -8210,7 +8213,7 @@ ul.sitemap li li li {
     padding-right: 10px;
   }
 }
-@media (min-width: 979px + 1) {
+@media (min-width: 1200px + 1) {
   .nav-collapse.collapse {
     height: auto !important;
     overflow: visible !important;
