--- a/src/main/resources/less/jahia.less
+++ b/src/main/resources/less/jahia.less
@@ -140,7 +140,10 @@ ul.sitemap li li li{display:inline-block;*display:inline}
 }
 /* =Responsive: Less 979px
 -------------------------------------------------------------- */
-@media (max-width: 979px) {
+@media (max-width: 1200px) {
+    .wrapper {
+        margin-top: 0;
+    }
     .navbar .brand {
         display: block;
         float: left;
