--- a/src/main/resources/less/variables.less
+++ b/src/main/resources/less/variables.less
@@ -59,7 +59,7 @@
 @baseLineHeight:        20px;
 @altFontFamily:         @serifFontFamily;
 
-@headingsFontFamily:    'Scada',Arial,"Helvetica Neue", Helvetica,sans-serif; // inherit; empty to use BS default, @baseFontFamily
+@headingsFontFamily:    'League Gothic',Arial,"Helvetica Neue", Helvetica,sans-serif; // inherit; empty to use BS default, @baseFontFamily
 @headingsFontWeight:    normal;    // instead of browser default, bold
 @headingsColor:         @black; // empty to use BS default, @textColor
 
