--- a/src/main/resources/less/navs.less
+++ b/src/main/resources/less/navs.less
@@ -128,7 +128,7 @@
   padding-bottom: 8px;
   line-height: @baseLineHeight;
   border: 1px solid transparent;
-  .border-radius(4px 4px 0 0);
+  .border-radius(0 0 0 0);
   &:hover,
   &:focus {
     border-color: @grayLighter @grayLighter #ddd;
@@ -155,7 +155,7 @@
   padding-bottom: 8px;
   margin-top: 2px;
   margin-bottom: 2px;
-  .border-radius(5px);
+  .border-radius(0);
 }
 
 // Active state
@@ -213,10 +213,10 @@
 // ---------
 
 .nav-tabs .dropdown-menu {
-  .border-radius(0 0 6px 6px); // remove the top rounded corners here since there is a hard edge above the menu
+  .border-radius(0 0 0 0); // remove the top rounded corners here since there is a hard edge above the menu
 }
 .nav-pills .dropdown-menu {
-  .border-radius(6px); // make rounded corners match the pills
+  .border-radius(0); // make rounded corners match the pills
 }
 
 // Default dropdown links
@@ -326,7 +326,7 @@
   margin-bottom: 0;
 }
 .tabs-below > .nav-tabs > li > a {
-  .border-radius(0 0 4px 4px);
+  .border-radius(0 0 0 0);
   &:hover,
   &:focus {
     border-bottom-color: transparent;
@@ -362,7 +362,7 @@
 }
 .tabs-left > .nav-tabs > li > a {
   margin-right: -1px;
-  .border-radius(4px 0 0 4px);
+  .border-radius(0 0 0 0);
 }
 .tabs-left > .nav-tabs > li > a:hover,
 .tabs-left > .nav-tabs > li > a:focus {
@@ -383,7 +383,7 @@
 }
 .tabs-right > .nav-tabs > li > a {
   margin-left: -1px;
-  .border-radius(0 4px 4px 0);
+  .border-radius(0 0 0 0);
 }
 .tabs-right > .nav-tabs > li > a:hover,
 .tabs-right > .nav-tabs > li > a:focus {
